# lib_mini_project

./: CMakeLists.txt  http_upload_post.txt  http_upload_put.txt  https_upload_post.txt  https_upload_put.txt  library.h
core/http_connect/include/: http_connect.h
core/http_connect/src/: http_connect.cpp
core/thread_pool/: thread_pool.h
download/: http_download.md  https_download.md
logger/src/: logger.cpp
logs/: my_log
test/: httpConnectUnitTest.cpp
